css/styles.css
* {
    height: auto;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
html {
    width: 100%;
    height: auto;
    margin: 0;
    padding: 0;
    font-family: montserrat-light;
}

body{
    background-color: #f0f2f0;
    height:auto;
    width:100%;
    margin: 0px;
    padding: 0px;
    font-size: 15px;
    line-height: 1.6;
}

ul {
    list-style-type: none;
    list-style-position:inside;
}
li {
    list-style-position: inside;
}

a {
    text-decoration: none;
}
h1 {
    text-align: center;
}
/* img {
    width: 100%;
} */

.bgImage {
    background-image: url("../Images/claujnunez_hero_backgroundimg.png");
    height: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
/* .navHeader {
    float: right;
    color: white;
} */

/* Navigation */
.navbar {
    float: right;
    overflow: hidden;
    height: 90px;
}

.navbar ul {
    display: flex;
}

.navbar a {
    color: #fff;
    padding: 10px;
    margin: 0 5px;
}

.navbar a:hover {
    border-bottom: 2px #fff solid;    
}

.navbar .flex {
    justify-content: space-between;
}
.container {
    max-width: 1100px;
    margin: 0 auto;
    overflow: auto;
    padding: 0 40px;
}

.flex {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.navheader > li{
    margin-right: 0;
    margin: 10px 50px 0px 0px;
    color: #fff;
}

.logo-img{
    position: relative;
    width: auto;
    max-width: 90px;
    margin: 10px 15px 15px 10px;
    padding: 10px 15px;
    box-shadow: #525252;
    float: left;
}

a:hover {
    background-color: #ddd;
    color: black;
    text-decoration: none;
  }

.smallHead {
    color: #fff;
    font-size: x-large;
    display: flex;
    justify-content: center;
}

.nameTitle {
    color: #fff;
    font-size: 50px;
    display: flex;
    justify-content: center;
}

.description {
    text-align: center;
    color: #fff;
}


.name {
    font-size: 20px;
    color: #fff;
    float: left;
    padding: 25px 0;
}

.inline-block {
    text-align: center;
    background-color: rgb(163, 163, 124);
}

.ul {
    width: 50%;
    margin-left: auto;
}

.content {
    position: absolute;
    left: 20%;
    right: 20%;
    top: 25%;
    width: 500px;
    margin: 0 auto;
}

.buttonsWrapper {
    position: absolute;
    left: 15%;  
    right: 15%;
    bottom: 30%;
     
 }
 
.btn-primary {
     width: 167px;
     height: 48px;
     background-color: #fff;
     color: #722963
 }
 
 .btn-primary:hover {
    background-color: #91618e;
 }
 
 .btn-outline-secondary {
     width: 167px;
     height: 48px;
 }
 
 .btn-outline-secondary:hover {
     background-color: #722963;
 }
 
 .btn-outline-light {
     margin-right: 40px;
 }
 
/* vvvvvvvv  Social Icons vvvvvvvvvvv */
.flexbox-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.flexbox-item {
   
    padding: 10px;
    margin: 10px;  
}

.social-linkedin {
    min-height: 25px;
}

.social-pinterest {
    min-height: 25px;
}

.social-facebook {   
    min-height: 25px;
}

.social-tweeter {   
    min-height: 25px;
}


/* ^^^^^^^^^ Social Icons ^^^^^^^^^^^^ */

 .socialDiv {
     position: absolute;
     top: 150%;
     left: 0%;
     right: 0%;
     color: white;
     width: 100%;
 }
 
.iconsSocial {
     /* margin-right: 20px; */
     max-width: 10%;
 }

/* Prejects Sections */
.projectsSec {
    margin-top: 50px;
    margin-bottom: 150px;
}

.float-container {
    border: 3px solid #fff;
    padding: 20px;
    height: 50%;
}

.float-child {
    width: 20%;
    float: left;
    padding: 20px;
    border: 2px solid red;
}  

.pictures {
    height: 10%;
}

.card {
    border: none;
    margin: 0 auto; /* Added */
    float: none; /* Added */
    margin-bottom: 100px; /* Added */
}


.card-img {
    /* background-color: greenyellow; */
    background-color: #f0f2f0;
    width: auto;
    max-height: 350px;
    padding-left: 20px;
}

.card-body {
    background-color: #f0f2f0;
    padding: 30 30 30 30;
    /* padding-bottom: 30px; */
    text-align: right;
}

.Odd {
    background-color: #f0f2f0;
    padding: 30 30 30 30;
    margin-left: 100px;
    padding-bottom: 30px;
    text-align: left;
}

.card-imgOdd {
    background-color: #f0f2f0;
    width: 100%;
    max-height: 350px;    
}

.container-fluid, .col-md-8, .col-md-4, .col-md-6 {
    background-color: #f0f2f0;
    
}

.imgIcon {
    display: inline-block;
    /* justify-content: center; */
    flex-direction: column;
    /* align-items: center; */
    /* background: #fafafa; */
}
.skillIcons {
    display: inline-block;
    width: 40%;
}

.btn-primary2 {
    width: 167px;
    height: 48px;
    background-color: #F47AF5;
    color: #fff;
    box-shadow: 0 1px 2px rgba(166, 12, 166, 0.15);
    transition: box-shadow 0.3s ease-in-out;
}

.btn-primary2:hover {
   background-color: #fff;
   box-shadow: 0 5px 15px rgba(166, 12, 166, 0.8);

}

.card-deck {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 10%;
    margin-top: 10%;
    width: 80%;
    height: auto;
}

.card-body2 {
    color: white;
    height: 100%;
    background-color: #800b72;
    padding: 0 40px 70px 50px;
}

.line {
    margin: 80px 200px 0px 0px;
    border: 1px solid pink;
}

.bottomTitle {
    /* background-color: lime; */
    text-align: left;
    padding: 50px 0 40px 0;
}

.newList {
    padding-left: 50px;
}

.newList li{
    
    list-style-type: disc;
    list-style-position: outside;
}

/* Footer */
.page-footer ul {
    display: flex;
    justify-content: center;

}

.page-footer a {
    padding: 10px;
    margin: 0 5px;
}
 a:hover {
    border-bottom: 2px #fff solid;  
    color: black;  
}

footer {
    position: absolute;
    bottom: auto;
    background-color: #525252;
    width: 100%;
    color: white;
    text-align: center;
    align-items: center;    
}

/* .navfooter a {
    
    position: relative;
    
    color: white;
} */



/* Tablets and under resolutions */
@media(max-width: 760px) {

    /* card deck  */
    .line {
        margin: 80px 100px 0px 0px;
        border: 1px solid pink;
    }

    .bottomTitle {
        font-size: 33px;
        
    }

    .card-body2 {
        width: 110%;
        margin: 0px;
        padding: 15px;
    }

    .container-fluid {
        padding: 0px;
        
    }
}

/* Mobile resolution */
/*  Top Section Code */
@media(max-width: 560px) {

    img {
        width:100%;
    }

    .col-md-3{
        width:100%;
        float:left;
        margin:0;
    }

   .navbar {
       height: 110px;
       padding: 0 15% 0 15%;
   }

   .navbar .flex {
        display: block;
        
   }

   .navbar ul {     
       padding: 10;
       background-color: rgba(0, 0, 0, .3);
   }

   .logo-mobile {
       float: left;
       overflow: hidden;
       padding: 5% 25% 0 25%;
   }

   .content {
        position: absolute;
        left: 0%;
        right: 0%;
        top: 19%;
        width: 100%;
        margin: 0 auto;
    }

   .smallHead {
       display: inline-block;
       align-content: center;
       text-align: center;
       padding: 30 0 0 43% ;
   }

   .nameTitle {
       font-size: 35px;   
   }

   .description {
       width: 100%;
       position: absolute;
       margin: 0%;
       align-content: center;
       text-align: center;
       padding: 5 40;
   }

   .buttonsWrapper {
       position: absolute;
       padding: 0 0 0 40;
       bottom: 30%;
   }

   .bgImage {
       height: 70%;
   }

   .proSkills {
       width: 90%;
   }

   /*  Middle Section Code */

   .projectsSec {
        margin: auto;
   }

   .card-body {
        display: block;
        float: right;
        width: 100%;
        /* background-color: red; */
    }

   .card-body.Odd {
       
       display: block;
       object-position: top;
   }

   .imgIcon {
       position: relative;
       margin-inline: 50px;
       
   }

  

   

}

